UI fixes: scrollbars & favicon

--- a/www/a/public/css/admin.css
+++ b/www/a/public/css/admin.css
@@ -2,4 +2,7 @@
 	background: white url('/auth/img/icons/ui-anim_basic_16x16.gif') right center no-repeat;
 }
 
+body {
+	overflow-y: scroll;
+}
 
